--- a/slashhour-app/package.json
+++ b/slashhour-app/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@types/react": "~19.1.0",
     "babel-preset-expo": "^54.0.4",
+    "madge": "^8.0.0",
     "typescript": "~5.9.2"
   },
   "private": true
