feat: Add save and share functionality to redemption QR code
- Install react-native-view-shot and expo-media-library
- Update RedemptionModal with branded QR image including:
  - App logo and branding
  - QR code with redemption details
  - Original/discounted prices
  - Business name, address, phone
  - Deal expiry date
- Add Save to Gallery button (requests media library permission)
- Add Share button for sharing via any app
- Update DealDetailScreen to pass additional deal data
- Configure expo-media-library permissions in app.json

--- a/slashhour-app/app.json
+++ b/slashhour-app/app.json
@@ -50,6 +50,14 @@
           "cameraPermission": "Allow Slashhour to access your camera to scan QR codes for redemptions.",
           "microphonePermission": false
         }
+      ],
+      [
+        "expo-media-library",
+        {
+          "photosPermission": "Allow Slashhour to save redemption QR codes to your photo gallery.",
+          "savePhotosPermission": "Allow Slashhour to save redemption QR codes to your photo gallery.",
+          "isAccessMediaLocationEnabled": true
+        }
       ]
     ],
     "ios": {
