--- a/slashhour-app/package.json
+++ b/slashhour-app/package.json
@@ -43,6 +43,7 @@
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-location": "~19.0.7",
+    "expo-media-library": "~18.2.0",
     "expo-notifications": "^0.32.12",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.7",
@@ -59,6 +60,7 @@
     "react-native-screens": "^4.18.0",
     "react-native-svg": "^15.14.0",
     "react-native-toast-message": "^2.3.3",
+    "react-native-view-shot": "4.0.3",
     "react-native-worklets": "^0.5.2",
     "socket.io-client": "^4.8.1",
     "zustand": "^5.0.8"
